testing/src/java7srclisting/errors/ErrorV8.java
package java7srclisting.errors;

public class ErrorV8 {

    public void test2(){
        if (true) {

        } else {

        }
    }

}
